//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "PrescrevaFarma" {
  database_type: 'postgresql'
  Note: ''
}

Table users {
  id Int [pk, increment]
  email String [unique, not null]
  crf String [not null]
  crfState String [not null]
  cep String [not null]
  street String [not null]
  district String [not null]
  complement String
  number String [not null]
  city String [not null]
  state String [not null]
  tel String
  phone String [not null]
  professionalPhone String [not null]
  password String [not null]
  name String [not null]
  cpf String [not null]
  birthDate DateTime [not null]
  gender Gender [not null]
  nacionality String [not null]
  logo String
  token String
  isAdmin Boolean [not null, default: false]
  refreshToken refresh_tokens [not null]
  patients patients [not null]
  prescriptions prescriptions [not null]
  forwarders forwarders [not null]
  appointments appointments [not null]
  Avaliation Avaliation [not null]
}

Table patients {
  id Int [pk, increment]
  email String
  name String [not null]
  birthDate DateTime [not null]
  gender Gender [not null]
  tel String
  nacionality String [not null]
  cpf String [not null]
  phone String [not null]
  professionalId Int [not null]
  professional users [not null]
  appointments appointments [not null]
  prescriptions prescriptions [not null]
  forwarders forwarders [not null]
}

Table medicines {
  id Int [pk, increment]
  name String [not null]
  subGroup String [not null]
  pharmaceuticalForm String [not null]
  maximumDosage String
  therapeuticIndication String [not null]
  type MedicineType [not null, default: 'MEDICINE']
  prescriptionMedicines prescription_medicines [not null]
}

Table prescriptions {
  id Int [pk, increment]
  professionalId Int [not null]
  patientId Int [not null]
  aditionalInfos String
  nonPharmacologicalTherapy String
  createdAt DateTime [default: `now()`, not null]
  professional users [not null]
  patient patients [not null]
  prescriptionMedicines prescription_medicines [not null]
}

Table prescription_medicines {
  id Int [pk, increment]
  prescriptionId Int [not null]
  medicineId Int [not null]
  concentration String [not null]
  instructions String [not null]
  administrationForm String [not null]
  prescription prescriptions [not null]
  medicine medicines [not null]
}

Table forwarders {
  id Int [pk, increment]
  professionalId Int [not null]
  patientId Int [not null]
  medicalExperience String [not null]
  forwardReason String [not null]
  showFooter Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  professional users [not null]
  patient patients [not null]
}

Table appointments {
  id Int [pk, increment]
  start DateTime [not null]
  end DateTime [not null]
  professionalId Int [not null]
  patientId Int [not null]
  professional users [not null]
  patient patients [not null]
}

Table Avaliation {
  id Int [pk, increment]
  grade Int [not null]
  comment String
  professionalId Int [not null]
  professional users [not null]
}

Table refresh_tokens {
  id String [pk]
  userId Int [not null]
  user users [not null]
}

Table forgot_password_tokens {
  id String [pk]
  userId Int [not null]
  token String [not null]
}

Table tokens_blacklist {
  id Int [pk, increment]
  token String [not null]
  createdAt DateTime [default: `now()`, not null]
}

Enum Gender {
  WOMAN
  MEN
  OTHER
}

Enum MedicineType {
  MEDICINE
  HERBAL_MEDICINES
}

Ref: patients.professionalId > users.id

Ref: prescriptions.professionalId > users.id

Ref: prescriptions.patientId > patients.id

Ref: prescription_medicines.prescriptionId > prescriptions.id

Ref: prescription_medicines.medicineId > medicines.id

Ref: forwarders.professionalId > users.id

Ref: forwarders.patientId > patients.id

Ref: appointments.professionalId > users.id

Ref: appointments.patientId > patients.id

Ref: Avaliation.professionalId > users.id

Ref: refresh_tokens.userId > users.id